--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@graf-research/adf-codegen-schema-typescript",
-  "version": "0.0.11",
+  "version": "0.0.16",
   "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf dist && tsc",
-    "start": "node dist",
+    "start": "node dist/exec.js",
     "dev": "npm run build && npm start",
     "test": "npm run dev"
   },
@@ -26,8 +26,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@graf-research/adf-codegen-model-typescript": "^0.0.11",
-    "@graf-research/adf-core": "^0.0.15",
+    "@graf-research/adf-core": "^0.0.16",
     "axios": "^1.7.7",
     "lodash": "^4.17.21"
   }
